# shopapi

./: .env  Cargo.toml  README.md  api.nu  db.nu  docker-compose.yml  run.nu  ts.nu
migrations/: 20220401123436_create_orders.sql  20220401123437_create_images.sql  20220417142920_create_products copy.sql  20220417142920_create_products.sql  20220417142921_create_users.sql
src/: auth.rs  errors.rs  main.rs  routes.rs  types.rs
src/handlers/: auth.rs  images.rs  mod.rs  orders.rs  products.rs  search.rs  users.rs
src/models/: auth.rs  images.rs  mod.rs  orders.rs  products.rs  search.rs  users.rs
src/products/: handlers.rs  models.rs
src/users/: handlers.rs  models.rs
utils/: simple.ts
