[package]
name = "shopapi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "*"
actix-web-httpauth = "*"
actix-cors = "*"
actix-session = { version = "*", features = [ "cookie-session" ] }
actix-files = "*"
sqlx = { version = "*", features = [ "runtime-tokio-rustls", "postgres", "chrono", "migrate", "offline" ] }
dotenv = "*"
argon2rs = "*"
env_logger = "0.8.3"
serde = "1.0.1"
serde_derive = "1.0"
serde_json = "1.0.6"
derive_more = "0.99.2"
anyhow = "1.0.40"
chrono = { version = "0.4", features = ["serde"]}
futures = "0.3.14"
ureq = "*"